<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Experience Sampler</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="studyActivity">My Studies</string>
    <string name="submit_answer">Submit</string>
    <string name="menu_settings">settings</string>
    <string name="start_time">Beepfree period start time</string>
    <string name="end_time">Beepfree period end time</string>
...
    <string name="pref_alarm_type">Alarm type</string>
    <string name="pref_alarm_tone">Alarm tone</string>
    <string name="pref_change_password">Change password</string>
    <string name="pref_change_password_summary">Change password on current account</string>
    <string name="pref_language">Language</string>
    <string name="new_event">Active Event</string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="choose_event">Choose the type of event and press \"Start\"</string>
    <string name="studies">My Studies</string>
    <string name="join">Join Studies</string>
    <string name="events">My Events</string>
    <string name="logout">Log Out</string>
...
