...
        android:id="@+id/study_duration"
        android:layout_below="@+id/study_name"
        android:layout_alignLeft="@+id/study_name"
        android:layout_alignStart="@+id/study_name"
        android:layout_marginTop="5dp"
        android:layout_marginRight="7dp"
        android:layout_toLeftOf="@+id/join_button"
        android:layout_toStartOf="@+id/join_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Join"
        android:drawableLeft="@drawable/ic_add"
        android:id="@+id/join_button"
        android:background="#00ffffff"
        android:clickable="true"
        android:focusable="false"
        android:enabled="true"
...
